Fix overflow issues + inconsistent column widths  + loader style

--- a/app/styles/inner-table.less
+++ b/app/styles/inner-table.less
@@ -26,17 +26,17 @@
   border-left: 1px solid lighten(@upf-gray, 15%);
 
   &--size-S {
-    min-width: 100px;
+    width: 100px;
     flex-grow: 100;
   }
 
   &--size-M {
-    min-width: 200px;
+    width: 200px;
     flex-grow: 200;
   }
 
   &--size-L {
-    min-width: 300px;
+    width: 300px;
     flex-grow: 300;
   }
 
@@ -95,21 +95,39 @@
 
   &:not(.hypertable__cell--header) {
     .cell-container {
+      width: 100%;
       display:flex;
       align-items:center;
+      &.editing,
+      &.saving {
+        .editing-input {
+          width: 100%;
+        }
+      }
     }
 
-    .upf-loading .spinner > div {
-      width: 6px;
-      height: 6px;
+    .upf-loading .spinner {
+      width: auto;
+      margin-left: @spacing-xx-sm;
+      > div {
+        width: 6px;
+        height: 6px;
+      }
     }
 
     .editing-input {
+      max-width: 80%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      div {
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+
       &__field {
-        margin-left: -5px;
-        margin-top: -1px;
+        width: 100%;
         padding: 5px 4px;
-        display: inline;
         font-size: inherit;
         height: auto;
       }
@@ -147,9 +165,6 @@
   }
 
   &.hypertable__cell--text:not(.hypertable__cell--header) {
-    .editing-input__field {
-      width: 100px;
-    }
     .tooltip-inner {
       max-width: 350px;
       overflow-wrap: break-word;
